--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="asterisk" translatable="false">*</string>
     <string name="zero" translatable="false">0</string>
     <string name="assign" translatable="false">=</string>
+    <string name="cheese">cheese</string>
 </resources>
