--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="cheese">cheese</string>
     <string name="previous">previous</string>
     <string name="next">next</string>
+    <string name="db_name" translatable="false">market</string>
 </resources>
